# Fun-logistics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Request.py  Shop.py  Store.py  celerybeat-schedule  docker-compose.yaml  entrypoint.sh  exceptions.py  main.py  manage.py  pyproject.toml  request.py  shop.py  storage.py  store.py
google_sheets_to_db/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
orders/: admin.py  exchange_rate_schema.py  exchange_rate_service.py  google_api_credentials.example.json  google_api_credentials.json  load_order_service.py  load_spreadsheet.py  models.py  serializers.py  spreadsheet_service.py  tasks.py  urls.py  views.py
orders/management/commands/: add_admin.py  get_orders.py  google_api_credentials.json  load_spreadsheet.py
orders/migrations/: 0001_initial.py
templates/orders/: orders.css  orders.html
users/: managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
