[tool.poetry]
name = "google-sheets-to-db"
version = "0.1.0"
description = ""
authors = ["doom <phramov945@gmail.com>"]
readme = "README.md"
packages = [{include = "google_sheets_to_db"}]

[tool.poetry.dependencies]
python = "^3.10"
gspread = "^5.7.2"
google-api-python-client = "^2.82.0"
oauth2client = "^4.1.3"
pandas = "^1.5.3"
sqlalchemy = "^2.0.7"
psycopg2-binary = "^2.9.5"
django = "^4.1.7"
django-environ = "^0.10.0"
djangorestframework = "^3.14.0"
schedule = "^1.1.0"
marshmallow-dataclass = "^8.5.12"
celery = "^5.2.7"
redis = "^4.5.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
